# frappe-deployer

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  README.org  action.yml  cliff.toml  devbox.json  example-config.toml  justfile  pyproject.toml  readme-usage.org  test-fm.localhost.toml  test_flag_overrides.py  test_rollback_configure.py  versions.json  zensical.toml
.github/configs/: test.toml
.github/scripts/: entrypoint.sh  get_version.py  helpers.sh
.github/workflows/: build-and-publish.yml  changelog.yml  deploy-pull.yml  deploy-ship.yml  docs.yml  pre-commit.yml  secret-scan.yml  test-build.yml  test.yml
docs/: BUILDING.md  architecture.md  changelog.md  commands.md  concepts.md  configuration.md  faq.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/commands/: README.md  cleanup.md  commands.md  configure.md  disable-maintenance.md  enable-maintenance.md  index.md  pull.md  search-replace.md
docs/getting-started/: index.md  installation.md  quick-start.md  requirements.md
docs/guides/: configuration.md  deploy-modes.md  frappe-cloud.md  github-actions.md  hooks.md  index.md  maintenance-mode.md  monorepo-apps.md  remote-workers.md  rollback.md
docs/reference/: architecture.md  concepts.md  directory-structure.md  index.md  troubleshooting.md
examples/deploy_configs/: production.toml  staging.toml
examples/workflows/: deploy.yml
fmd/: app.py  consts.py  exceptions.py  helpers.py  release_directory.py  search_replace.py  ssh.py
fmd/commands/: _utils.py  cleanup.py  info.py  remote_worker.py  search_replace.py
fmd/config/: app.py  bake.py  config.py  configure.py  deploy.py  fc.py  fm.py  pull.py  release.py  remote_worker.py  ship.py  switch.py  utils.py
fmd/fc/: __init__.py  client.py  data_source.py
fmd/logger/: __init__.py  log.py  logging_output.py
fmd/managers/: __init__.py  pull.py  release.py  remote_worker.py  ship.py
fmd/runner/: base.py  docker.py  host.py  image_lifecycle.py
fmd/services/: __init__.py  apps.py  backup.py  bench.py  cleanup.py  symlinks.py
frappe_deployer/: __init__.py  build_manager.py  config.toml  consts.py  deployment_manager.py  exceptions.py  fc.py  fmbench.py  helpers.py  main.py  release_directory.py  remote_worker.py  search_replace.py  ssh.py
frappe_deployer/commands/: __init__.py  build.py  build_image.py  callback.py  cleanup.py  clone.py  configure.py  info  info.py  maintenance.py  pull.py  remote_worker.py  search_replace.py
frappe_deployer/config/: app.py  build.py  config.py  fc.py  fm.py  host.py  remote_worker.py  utils.py
frappe_deployer/template/: frappe.Dockerfile  nginx.Dockerfile
frappe_deployer/tests/: test_config_app_configuration.py
frappe_deployer/utils/: download.py
rich/: progress.py
scripts/: configure_deploy_keys.sh  depends-common.sh  deploy.sh  helpers.sh  justfile.depends  update_cli_docs.py
site/: 404.html  index.html  search.json  sitemap.xml
site/BUILDING/: index.html
site/changelog/: index.html
tests/: test_flag_overrides.py  test_rollback_configure.py  test_runtime_symlinks.py
v1.0/: 404.html  index.html  search.json  sitemap.xml
v1.1/: 404.html  index.html  search.json  sitemap.xml
(+86 files in other folders)
