[tool.poetry]
name = "frappe-deployer"
version = "0.13.1"
description = "Automates setup and management of Frappe/Frappe-Manager environments using flags or config file."
authors = ["Alok Singh <alokmilenium@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
frappe-deployer = "frappe_deployer.main:cli_entrypoint"
fmd = "fmd.app:cli_entrypoint"

[tool.poetry.dependencies]
python = "^3.10"
frappe-manager = { git = "https://github.com/rtcamp/frappe-manager.git", rev = "e8eebeef1872106d3516992ed94325754ed31af2" }
gitpython = "^3.1.43"
typer = ">=0.21.0,<0.22.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
