[project]
name = "fmd"
dynamic = ["version"]
description = "Automates setup and management of Frappe/Frappe-Manager environments using flags or config file."
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Alok Singh", email = "alokmilenium@gmail.com" }]
dependencies = [
    "frappe-manager",
    "gitpython>=3.1.43,<4.0.0",
    "typer>=0.21.0,<0.22.0",
    "toml>=0.10.2,<0.11.0",
    "pydantic>=2.0.0,<3.0.0",
    "typer-examples",
]

[project.scripts]
fmd = "fmd.app:cli_entrypoint"

[tool.uv]
package = true

[tool.uv.sources]
frappe-manager = { git = "https://github.com/rtcamp/frappe-manager.git", rev = "develop" }
typer-examples = { git = "https://github.com/Xieyt/typer-examples", tag = "v1.1.0" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fmd"]

[tool.hatch.version]
path = "fmd/__about__.py"
